2004-09-25  Mark Kettenis  <kettenis@gnu.org>

	* configure.in: Check for waddstr instead of mvwaddstr when
	searching for curses library.  Check for wborder.
	* configure, config.in: Regenerate.
	* tui/tui-wingeneral.c (box_win): Use box if wborder isn't
	available.

	* inf-ptrace.c (inf_ptrace_xfer_memory): Fix gdb_indent.sh wart.

2004-09-24  Robert Picco <Robert.Picco@hp.com>

	Committed by Andrew Cagney.
	* remote.c (set_remote_protocol_p_packet_cmd, remote_protocol_p)
	(show_remote_protocol_p_packet_cmd): New.  Implement 'p' packet.
	configuration.
	(fetch_register_using_p): Implement 'p' packet.  Based on code by
	Fernando Nasser.
	(remote_fetch_registers): Call fetch_register_using_p.
	(init_all_packet_configs, show_remote_cmd)
	(_initialize_remote): Add p-packet.

2004-09-24  Mark Kettenis  <kettenis@gnu.org>

	* inf-ptrace.c (inf_ptrace_kill_inferior): Call ptrace directly
	instead of call_ptrace.  Call wait directly instead of
	ptrace_wait.
	(inf_ptrace_me): Call ptrace directly instead of call_ptrace.
	(inf_ptrace_wait): Inline ptrace_wait call.

2004-09-24  Paul Hilfinger  <hilfingr@nile.gnat.com>

	* Makefile.in (.y.c): Revert previous change.  ../ylwrap was 
	rolled back instead.

2004-09-24  Paul Hilfinger  <hilfingr@nile.gnat.com>

	* Makefile.in (.y.c): Modify $(YLWRAP) invocation to use
	the new argument order.

2004-09-23  Corinna Vinschen  <vinschen@redhat.com>

	* MAINTAINERS: Remove "broken" from XStormy16 entry.
	* xstormy16-tdep.c: Convert XStormy16 target to latest GDB methods.
	(struct gdbarch_tdep): Remove.
	(struct xstormy16_frame_cache): New frame cache structure.
	(xstormy16_register_byte, xstormy16_register_raw_size)
	(xstormy16_reg_virtual_type, xstormy16_register_type)
	(xstormy16_push_arguments, xstormy16_push_return_address)
	(xstormy16_pop_frame, xstormy16_store_struct_return)
	(xstormy16_store_return_value, xstormy16_extract_struct_value_address)
	(xstormy16_frame_saved_register, xstormy16_get_saved_register)